<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--ImageView
                android:id="@+id/imageView_loginActivity_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/standard_margin"
                android:tint="@color/gray700"
                app:srcCompat="@drawable/ic_arrow_back" /-->


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/high_margin"
                app:srcCompat="@drawable/ic_undraw_access" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/high_margin"
                android:layout_marginBottom="@dimen/high_margin"
                android:text="@string/enter"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/gray700"
                android:textSize="@dimen/very_large_text_size"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_loginActivity_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/high_margin"
                android:layout_marginRight="@dimen/high_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:background="@drawable/shape_edit_text"
                android:digits="0123456789AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz_"
                android:gravity="right|center_vertical"
                android:hint="@string/userName"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="46dp"
                android:nextFocusDown="@+id/EditText_authActivity_password"
                android:paddingRight="@dimen/standard_padding"
                android:singleLine="true"
                android:textDirection="locale" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_loginActivity_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/high_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/high_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:background="@drawable/shape_edit_text"
                android:gravity="right|center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="46dp"
                android:nextFocusDown="@+id/checkbox_loginActivity_passwordToggle"
                android:paddingRight="@dimen/standard_padding"
                android:singleLine="true"
                android:textDirection="locale" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_loginActivity_passwordToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/standard_margin"
                android:layoutDirection="rtl"
                android:text="@string/showPassword" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginLeft="@dimen/high_margin"
                android:layout_marginTop="@dimen/high_margin"
                android:layout_marginRight="@dimen/high_margin"
                android:layout_marginBottom="@dimen/high_margin">

                <Button
                    android:id="@+id/btn_loginActivity_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_btn"
                    android:text="@string/enter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_text_size" />

                <ProgressBar
                    android:id="@+id/progressBar_loginActivity_loading"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>


            <TextView
                android:id="@+id/textView_loginActivity_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/high_margin"
                android:text="@string/newUser"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

