<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.SignUpActivity">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinator_signUpActivity"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="@dimen/standard_margin"
                    android:tint="@color/gray700"
                    app:srcCompat="@drawable/ic_arrow_back" /-->


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/high_margin"
                    app:srcCompat="@drawable/ic_undraw_authentication" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/signUp"
                    android:layout_margin="@dimen/standard_margin"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editText_signUpActivity_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/high_margin"
                    android:layout_marginRight="@dimen/high_margin"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:background="@drawable/shape_edit_text"
                    android:digits="0123456789AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz_"
                    android:gravity="right|center_vertical"
                    android:hint="@string/userName"
                    android:inputType="text"
                    android:minHeight="46dp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/editText_signUpActivity_phone"
                    android:paddingRight="@dimen/standard_padding"
                    android:textDirection="locale" />

                <TextView
                    android:id="@+id/textView_signUpActivity_checkIdentity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/high_margin"
                    android:visibility="gone"
                    android:textSize="@dimen/normal_text_size"
                    />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editText_signUpActivity_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/high_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginRight="@dimen/high_margin"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:background="@drawable/shape_edit_text"
                    android:gravity="right|center_vertical"
                    android:hint="@string/userPhone"
                    android:maxLength="11"
                    android:inputType="number"
                    android:minHeight="46dp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/editText_authActivity_password"
                    android:paddingRight="@dimen/standard_padding"
                    android:textDirection="locale" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editText_signUpActivity_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/high_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginRight="@dimen/high_margin"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:background="@drawable/shape_edit_text"
                    android:gravity="right|center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="46dp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/btn_signUpActivity_signUp"
                    android:paddingRight="@dimen/standard_padding"
                    android:textDirection="locale" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_signUpActivity_passwordToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="@dimen/standard_margin"
                    android:layoutDirection="rtl"
                    android:text="@string/showPassword" />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginLeft="@dimen/high_margin"
                    android:layout_marginTop="@dimen/high_margin"
                    android:layout_marginRight="@dimen/high_margin"
                    android:layout_marginBottom="@dimen/high_margin"
                    >

                    <Button
                        android:id="@+id/btn_signUpActivity_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/newUser"
                        android:textColor="@color/white"
                        android:background="@drawable/shape_btn"
                        android:textSize="@dimen/large_text_size" />

                    <ProgressBar
                        android:id="@+id/progressBar_signUpActivity_waiting"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        />

                </FrameLayout>

                <TextView
                    android:id="@+id/textView_signUpActivity_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/high_margin"
                    android:text="@string/enter"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

