<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_profileEditActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.profileEdit.ProfileEditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/edit_user_profile"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/standard_margin"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_arrow_back" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_profileEditActivity_userProfileImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/standard_margin"
                />

            <TextView
                android:id="@+id/textView_profileEditActivity_imageEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView_profileEditActivity_userProfileImage"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/standard_margin"
                android:text="@string/edit_picture"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_profileEditActivity_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_profileEditActivity_imageEdit"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/high_margin"
                android:layout_marginRight="@dimen/high_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:text="@string/userName"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_profileEditActivity_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_profileEditActivity_username"
                android:layout_marginLeft="@dimen/high_margin"
                android:layout_marginRight="@dimen/high_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:background="@drawable/shape_edit_text"
                android:digits="0123456789AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz_"
                android:gravity="right|center_vertical"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="46dp"
                android:nextFocusDown="@+id/EditText_authActivity_password"
                android:paddingRight="@dimen/standard_padding"
                android:singleLine="true"
                android:textDirection="locale" />

            <TextView
                android:id="@+id/textView_profileEditActivity_checkUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText_profileEditActivity_username"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/high_margin"
                android:textSize="@dimen/normal_text_size"
                android:visibility="gone" />


            <TextView
                android:id="@+id/textView_profileEditActivity_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_profileEditActivity_checkUsername"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/high_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:text="@string/userPhone"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_profileEditActivity_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_profileEditActivity_phone"
                android:layout_marginLeft="@dimen/high_margin"
                android:layout_marginRight="@dimen/high_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:background="@drawable/shape_edit_text"
                android:gravity="right|center_vertical"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:minHeight="46dp"
                android:nextFocusDown="@+id/EditText_authActivity_password"
                android:paddingRight="@dimen/standard_padding"
                android:singleLine="true"
                android:textDirection="locale" />

            <TextView
                android:id="@+id/textView_profileEditActivity_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText_profileEditActivity_phone"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/high_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:text="@string/password"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_profileEditActivity_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_profileEditActivity_password"
                android:layout_marginLeft="@dimen/high_margin"
                android:layout_marginRight="@dimen/high_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:background="@drawable/shape_edit_text"
                android:gravity="right|center_vertical"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="46dp"
                android:nextFocusDown="@+id/editText_loginActivity_phone"
                android:paddingRight="@dimen/standard_padding"
                android:singleLine="true"
                android:textDirection="locale" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_profileEditActivity_passwordToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText_profileEditActivity_password"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/standard_margin"
                android:layoutDirection="rtl"
                android:text="@string/showPassword" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/standard_margin">

                <ProgressBar
                    android:id="@+id/progressBar_profileEditActivity_loading"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_profileEditActivity_edit"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:background="@drawable/shape_btn"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_text_size" />

            </FrameLayout>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>